# cpp-my-playground

./: .gitignore  README.md
derive/: CMakeLists.txt
derive/main/: main  main.cpp
derive/support/: CMakeLists.txt  base.hpp  derive.cpp  derive.hpp
derive_all/: base.cpp  main.cpp
dyncast/: main.cpp
epomeo/: README.md
epomeo/.example_vscode/: launch.json  tasks.json
epomeo/src/: func_ptr.c  pointer_add.c  pointer_loop.c
grotti/: README.md  memvar_visibility.cc
grotti/09_Functions/: function_call_overload.cc  function_pointer.cc  lambda_capture.cc
layouts/: README.md
layouts/basic/: CMakeLists.txt
layouts/basic/include/sub2/: car.h
layouts/basic/src/sub1/: vehicle.cpp
layouts/basic/src/sub2/: car.cpp
layouts/cmake-project-template/: README.md
layouts/find-package-module/main/: CMakeLists.txt  Makefile  main.cc
layouts/find-package-module/main/cmake/: Findsupport.cmake
layouts/find-package-module/support/: CMakeLists.txt
layouts/macro-names/: names.cc  names.sh  values.cc  values.sh
layouts/makeinc/: Makefile
layouts/makeinc/include/: mult.hpp
layouts/makeinc/src/: main.cpp  mult.cpp  simple.cpp  simple.hpp
layouts/misc/: Makefile  sub.mk
layouts/misc/src/: main.cpp  (+1 more)
layouts/multexec/: CMakeLists.txt
layouts/nested_inc/: CMakeLists.txt  main.cpp
layouts/plain_test/: CMakeLists.txt  README.md
layouts/set-var/: CMakeLists.txt
layouts/static-var/: Makefile
layouts/target-sources-recursive/: CMakeLists.txt
layouts/target-sources-recursive/include/addition/: add.h
layouts/target-sources-recursive/include/multiplication/: multiply.h
layouts/target-sources-recursive/src/: CMakeLists.txt  main.cc
layouts/target-sources-recursive/src/addition/: CMakeLists.txt  add.cc
layouts/target-sources-recursive/src/multiplication/: CMakeLists.txt  multiply.cc
layouts/testing/: CMakeLists.txt
layouts/testing/config/: README.md  c_cpp_properties.json.example  launch.json.example
layouts/testing/include/: add.h  base.h  cconfig.h  using_intro.h
layouts/testing/src/: CMakeLists.txt  add.cc  base.cc  cconfig.cc
layouts/testing/tests/: CMakeLists.txt  add_test.cc  array_padd_test.cc  cconfig_test.cc  using_intro_test.cc
layouts/vmake/: Makefile
misc/: Makefile
misc/include/: message.hpp
nested_lib/: CMakeLists.txt
nested_obj/: CMakeLists.txt
nested_obj/include/level1/level2/: vehicle.h
nested_obj/src/: main.cpp
nested_obj/src/level1/: CMakeLists.txt
other/: CMakeLists.txt.args.example  PrintType.cpp  alloc_mismatch.cpp  any_of.cpp  array_by_ref.cpp  attr_address_by_type.cpp  base_class_dtor.cpp  bind_args.cpp  class_object_init.cpp  class_size.cpp  class_vector_ctor.cpp  command_line_param.cpp  compile_test.cpp  conditional_type.cpp  const_mutable.cpp  conversion_constructor.cpp  copy_assignment_operator.cpp  copy_ctor.cpp  cpp_impl_coroutine.cpp  custom_iterator.cpp  custom_swap.cpp  cv-args.cpp  declval_example.cpp  default_init_class_mem.cpp  default_template_param.cpp  default_var_init.cpp  define_before_return_type  define_before_return_type.cpp  do_while_0.cpp  downcast.cpp  dyn_cast_void_ptr.cpp  elide_ctor.cpp  equal_to.cpp  fold_expression_sum.cpp  friend_quialifier.cpp  func_arg_point_or_ref.cpp  function_templates.cpp  gt_lt_overload.cpp  implicit_destructor_call.cpp  infer.cpp  (+65 more)
other/.example_vscode/: launch.json  tasks.json
project_layout/src/: main.cpp
snippets/: type_alias.cpp  uint8_incr.cpp
snippets/initlist/: initlist
snippets/pointer_to_member/: CMakeLists.txt  pointer_to_member.cpp
snippets/pointer_to_string_shift/: pointer_to_string_shift  pointer_to_string_shift.cpp
templates/function-templates/: function_templates
(+41 files in other folders)
